force-app/main/default/objects/Demo_Integration_Procedure_Response__e/Demo_Integration_Procedure_Response__e.object-meta.xml
<CustomObject>
    <description>Event used to publish responses from Integration Procedures</description>
    <label>Demo - Integration Procedure Response</label>
    <pluralLabel>Demo - Integration Procedure Responses</pluralLabel>
</CustomObject>