force-app/main/default/objects/Demo_Integration_Procedure_Response__e/fields/correlationId__c.field-meta.xml
<CustomField>
    <fullName>correlationId__c</fullName>
    <description>Correlation Identifier from original Integration Procedure request.</description>
    <label>correlationId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>