force-app/main/default/objects/Demo_Integration_Procedure_Response__e/fields/ipkey__c.field-meta.xml
<CustomField>
    <fullName>ipkey__c</fullName>
    <description>Integration Procedure key</description>
    <label>ipkey</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>